--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -71,13 +71,12 @@
                     <li><a href="{%url 'inversion_categoria'%}">Inversiones</a></li>
                   </ul>
                 </li>
-                <li><a href="/core/plan-de-inversion/?inversion__municipio__slug=boaco&inversion__year=2015">PLANES DE INVERSIÓN</a></li>
-                <li><a href="#contact">CONTÁCTENOS</a></li>
+                <li><a href="/core/plan-de-inversion/?inversion__anio=2015&inversion__municipio=1">PLANES DE INVERSIÓN</a></li>
+                    <li><a href="#contact">CONTÁCTENOS</a></li>
               </ul>
             </div>
           </div>
         </nav>
-
       </div>
     </div>
 
